<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 The Android Open Source Project
    Copyright (C) 2024-2025 The LineageOS Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground">

    <!-- Material 3 filter chips: All / Personal / OTP / Offers -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="6dp"
        android:clipToPadding="false"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:chipSpacingHorizontal="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_chip_all"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/conversation_filter_all"
                app:checkedIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_chip_personal"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/conversation_filter_personal"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/ic_filter_person" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_chip_otp"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/conversation_filter_otp"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/ic_filter_otp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_chip_offers"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/conversation_filter_offers"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/ic_filter_offers" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/conversation_list_first_item_extra_padding"
            android:paddingBottom="88dp"
            android:clipToPadding="false"
            android:listSelector="?android:attr/listSelector"
            android:dividerHeight="0px" />

        <include
            layout="@layout/list_empty_view"
            android:id="@+id/no_conversations_view"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/conversation_list_empty_text_bottom_margin" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
            android:id="@+id/start_new_conversation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="@string/start_chat"
            android:forceDarkAllowed="false"
            android:textColor="@color/fab_fg_color"
            app:backgroundTint="@color/fab_color"
            app:icon="@drawable/ic_message"
            app:iconTint="@color/fab_fg_color"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    </FrameLayout>

</LinearLayout>
